--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SH",
-  "license": "ISC",
+  "license": "MIT",
   "description": ""
 }
